# VirOS

./: CMakeLists.txt  README.md  build-docker.sh  build.sh  wget-log  wget-log.1
build-cpp/: CMakeCache.txt  Makefile  cmake_install.cmake  cursed-cat  cursed-help  cursed-ls  cursed-mkdir  cursed-vim
etc/: motd
scripts/: README.md  chroot.sh
src/: explanation.txt
src/cursed-cat/: main.cpp
src/cursed-cd/: main.cpp
src/cursed-help/: main.cpp
src/cursed-ls/: main.cpp
src/cursed-mkdir/: main.cpp
src/cursed-vim/: main.cpp
